--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,16 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Force Failure
+      - name: Run test
         run: go test -cover ./... 
+  format:
+    name: Style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.23.0"
+      - name: check format
+        run: test -z $(go fmt ./...)
