--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,12 +29,13 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.23.0"
+
+
+
       - name: check format
         run: test -z $(go fmt ./...)
 
-      - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
-
-      - name: Run staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest && $(go env GOPATH)/bin/staticcheck ./...
+      - uses: dominikh/staticcheck-action@v1
+        with:
+          version: "latest"
 
