--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,26 +16,29 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23.0"
+          go-version: '1.23.0'
 
-      - name: Run test
-        run: go test -cover ./... 
-  format:
+      - name: Run unit tests
+        run: go test ./... -cover
+
+  style:
     name: Style
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23.0"
+          go-version: '1.23.0'
 
-
-
-      - name: check format
+      - name: Check formatting
         run: test -z $(go fmt ./...)
 
-      - uses: dominikh/staticcheck-action@v1
-        with:
-          version: "latest"
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
+      - name: Run staticcheck
+        run: staticcheck ./...
