--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,3 +42,6 @@ jobs:
 
       - name: Run staticcheck
         run: staticcheck ./...
+  security:
+    - name: Install gosec
+      run: go install github.com/securego/gosec/v2/cmd/gosec@latest
